Bug 132183 - Chrome registry doesn't handle uppercase package names; normalize all packages to lowercase, r=darin+Neil